--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,12 +1,16 @@
 body{
     margin: 0;
     padding: 0;
+
+}
+.main_con{
     width: 100vw;
     height: 100vh;
     background-image: url('../image/bg.jpg');
     background-size: cover;
     background-blend-mode: multiply;
     background-color: rgb(70, 70, 70);
+    overflow: hidden;
 }
 .form-group{
     margin: 0.3rem!important;
